Include package {CJKutf8}
Include package {CJKutf8} for UTF-8 coding Chinese
Created chinesecommands.tex for future use.

--- a/whitepaper/header/deps.tex
+++ b/whitepaper/header/deps.tex
@@ -15,6 +15,7 @@
 \usepackage{subcaption}
 \usepackage{titlesec}
 \usepackage{titling}
+\usepackage{CJKutf8}
 \usepackage[dvipsnames]{xcolor}
 
 \usepackage[backend=biber, style=alphabetic]{biblatex}
