--- a/whitepaper/main.tex
+++ b/whitepaper/main.tex
@@ -4,10 +4,12 @@
 \input{header/style}
 \input{header/title}
 \input{header/commands}
+\input{header/chinesecommands}
 
 \makeindex
 
 \begin{document}
+\begin{CJK}{UTF8}{gbsn}
 	\begin{titlepage}
 	\maketitle
 	\end{titlepage}
@@ -56,5 +58,6 @@
 	\printbibliography
 
 	\printindex
+\end{CJK}
 \end{document}
 
