--- a/whitepaper/header/title.tex
+++ b/whitepaper/header/title.tex
@@ -9,10 +9,10 @@
 	\fontsize{72pt}{74pt}\textbf{NEM}
 	\\
 	\vspace{5mm}
-	\fontsize{24pt}{25pt}\textit{Technical Reference}
+	\fontsize{18pt}{20pt}\textit{技术指南（白皮书）}
 	\\
 	\vspace{20mm}
-	\fontsize{12pt}{14pt}{Version 1.0}
+	\fontsize{12pt}{14pt}{版本 1.0}
 }
 \author{}
-\date{\today}
+\date{1月2日，2020年}
