--- a/whitepaper/main.tex
+++ b/whitepaper/main.tex
@@ -7,6 +7,7 @@
 \input{header/chinesecommands}
 
 \makeindex
+\renewcommand{\contentsname}{目录}
 
 \begin{document}
 \begin{CJK}{UTF8}{gbsn}
@@ -60,4 +61,3 @@
 	\printindex
 \end{CJK}
 \end{document}
-
