--- a/whitepaper/preface.tex
+++ b/whitepaper/preface.tex
@@ -1,28 +1,28 @@
-\section*{Preface}
-\addcontentsline{toc}{section}{Preface}
+\section*{前言}
+\addcontentsline{toc}{section}{前言}
 
 \nemquote{
-You miss 100\% of the shots you don't take.
-}{Wayne Gretzky}
+你错过了100\%的你没有尝试的击球机会。
+}{韦恩·格雷茨基\footnote{韦恩·格雷茨基，加拿大的职业冰球明星。}}
 
-\nemchapterfirstletter{N}{EM} had its humble beginnings as a "call for participation" on a bitcointalk thread in January 2014.
-The cryptospace had just experienced a boom at the tail end of 2013 - although nowhere near where it would go a few years later - and there was a lot of enthusiasm in the space.
-NXT had just launched as one of the first PoS blockchains, and much of the early NEM community was inspired by and had connections to the NXT community. This includes all three of the remaining core developers.
+NEM最初的起源是在2014年1月bitcointalk论坛中一篇帖子里的“投名状”。
+加密数字货币领域刚刚经历了2013年底的一波爆发，尽管当时的价格与数年之后相去甚远，可这时的人们总是充满了热情。
+NXT主网的发布使得其成为了最早期的POS区块链之一，NEM的早期社区从中汲取了灵感和人才，其中就包括了三位至今仍活跃着的核心研发者。
 
-Although there was some initial discussion on what to build, we quickly decided to create something new from scratch.
-We wanted to challenge ourselves and see if we could build something useful.
-As a result of lots of effort - mostly nights and weekends - this culminated in the release of NIS1 mainnet in March 2015.
-We were pleased with what we built, but knew we took a few shortcuts, and continued improving it.
-Eventually, we came to the realization that the original solution would need a rearchitecture to fix some central performance bottlenecks and allow faster innovation in the future.
+最初有很多关于我们要做什么的讨论，但我们很快决定要从零开始做一些全新的东西。
+我们想要挑战自己，看看能不能做出什么有用的产品来。
+作为很多个周末跟夜晚辛勤付出的结果，我们终于在2015年的3月份发布了名为NIS1的NEM主网。
+我们对于这个产品感到很满意，但是我们清楚在开发的过程中也采取了一些捷径，于是我们决定继续改善它。
+最终，我们意识到了原先解决方案需要一次技术重构来突破核心性能瓶颈，同时适应未来更快速的创新。
 
-We are grateful to TechBureau who provided support for us to build a completely new chain from scratch - \codename.
-We are hopeful that this fixes many of the problems inherent in NIS1 and provides a solid foundation for future improvements and enhancements.
-Our mandate was to build a high performance *blockchain* - not a DAG or dBFT based system.
-In this, we think, we succeeded.
+我们非常感激TechBureau对我们从零开始创建一条全新的链的支持 - \codename.
+我们希望这些条新的链可以解决NIS1存在的众多问题，并且为未来的性能增强和发展提供坚实的基础。
+我们的使命是创建一个高性能的“区块链”，而非基于DAG或是dBFT的系统。
+在这种意义上而言，我们认为，我们是成功的。
 
-This has been a long journey for us, and we hope this is the last blockchain that we build from scratch.
-We are excited to see what yet is to come and what novel things you use \codenamespace to build.
-We would like to once again thank the contributors and the many people who have inspired us\ldots
+这对于我们来说是一个漫长的旅程，我们希望这是最后一条我们从零开始构建的区块链。
+我们对于未来感到兴奋，也期待看到你们使用\codenamespace创建的全新产品。
+最后，再次感谢给予那些我们灵感和支持的人们\ldots
 
 \begin{flushright}
 BloodyRookie
