Updated Branch Version to Jan 21
Updated Branch Version to Jan 21
15 commits merged from nemtech branch

--- a/whitepaper/bibliography.bib
+++ b/whitepaper/bibliography.bib
@@ -1,42 +1,73 @@
-@InProceedings{Bernstein2011,
-  Title                    = {High-Speed High-Security Signatures},
-  Author                   = {Daniel J. Bernstein and Niels Duif and Tanja Lange and  Peter Schwabe and Bo{-}Yin Yang},
-  Booktitle                = {Cryptographic Hardware and Embedded Systems - {CHES} 2011 - 13th International  Workshop, Nara, Japan,
- September 28 - October 1, 2011. Proceedings},
-  Year                     = {2011},
-  Pages                    = {124--142},
+@Misc{nakamoto2009,
+  Title                = {Bitcoin: A peer-to-peer electronic cash system},
+  Author               = {Nakamoto, Satoshi},
+  Url                  = {http://www.bitcoin.org/bitcoin.pdf},
+  Year                 = 2009
+}
 
-  Bibsource                = {dblp computer science bibliography, http://dblp.org},
-  Biburl                   = {http://dblp.uni-trier.de/rec/bib/conf/ches/BernsteinDLSY11},
-  Crossref                 = {DBLP:conf/ches/2011},
-  Doi                      = {10.1007/978-3-642-23951-9_9},
-  Timestamp                = {Thu, 29 Sep 2011 19:49:38 +0200},
-  Url                      = {http://dx.doi.org/10.1007/978-3-642-23951-9_9}
+@InProceedings{Bernstein2011,
+  Title                = {High-Speed High-Security Signatures},
+  Author               = {Daniel J. Bernstein and Niels Duif and Tanja Lange and  Peter Schwabe and Bo{-}Yin Yang},
+  Booktitle            = {Cryptographic Hardware and Embedded Systems - {CHES} 2011 - 13th International  Workshop, Nara, Japan,
+September 28 - October 1, 2011. Proceedings},
+  Year                 = {2011},
+  Pages                = {124--142},
+  Bibsource            = {dblp computer science bibliography, http://dblp.org},
+  Biburl               = {http://dblp.uni-trier.de/rec/bib/conf/ches/BernsteinDLSY11},
+  Crossref             = {DBLP:conf/ches/2011},
+  Doi                  = {10.1007/978-3-642-23951-9_9},
+  Timestamp            = {Thu, 29 Sep 2011 19:49:38 +0200},
+  Url                  = {http://dx.doi.org/10.1007/978-3-642-23951-9_9}
 }
 
 @PhdThesis{Scipioni2009,
-  Title                    = {Algorithms and Services for Peer-to-Peer Internal Clock Synchronization},
-  Author                   = {Sirio Scipioni},
-  School                   = {Universit`a degli Studi di Roma ,,La Sapienza''},
-  Year                     = {2009},
-
-  Owner                    = {BloodyRookie},
-  Timestamp                = {2015.04.22}
+  Title                = {Algorithms and Services for Peer-to-Peer Internal Clock Synchronization},
+  Author               = {Sirio Scipioni},
+  School               = {Universit`a degli Studi di Roma ,,La Sapienza''},
+  Year                 = {2009},
+  Owner                = {BloodyRookie},
+  Timestamp            = {2015.04.22}
 }
 
 @incollection{Douceur2002,
-  Title                    = {The sybil attack},
-  Author                   = {Douceur, John R},
-  Booktitle                = {Peer-to-peer Systems},
-  Year                     = {2002},
-  Pages                    = {251--260},
-  Publisher                = {Springer}
+  Title                = {The sybil attack},
+  Author               = {Douceur, John R},
+  Booktitle            = {Peer-to-peer Systems},
+  Year                 = {2002},
+  Pages                = {251--260},
+  Publisher            = {Springer}
 }
 
 @InProceedings{Merkle1988,
-  Title                    = {A Digital Signature Based on a Conventional Encryption Function},
-  Author                   = {Merkle, R. C.},
-  Booktitle                = {Advances in Cryptology — CRYPTO '87},
-  Pages                    = {369--378},
-  Year                     = {1988}
+  Title                = {A Digital Signature Based on a Conventional Encryption Function},
+  Author               = {Merkle, R. C.},
+  Booktitle            = {Advances in Cryptology — CRYPTO '87},
+  Pages                = {369--378},
+  Year                 = {1988}
+}
+
+@InProceedings{Morrison1968,
+  Title                = {PATRICIA - Practical Algorithm to Retrieve Information Coded in Alphanumeric},
+  Author               = {Donald R. Morrison},
+  Booktitle            = {Journal of the ACM, 15(4)},
+  Pages                = {514--534},
+  Year                 = {1968}
+}
+
+@Misc{King:2012:PPP,
+  Author               = "Sunny King and Scott Nadal",
+  Title                = "{PPCoin}: Peer-to-Peer Crypto-Currency with Proof-of-Stake",
+  Howpublished         = "Web document",
+  Pages                = "6",
+  Month                = aug,
+  Year                 = "2012",
+  URL                  = "https://decred.org/research/king2012.pdf",
+}
+
+@Misc{Nxt2013,
+  Title                = {Whitepaper:Nxt},
+  Author               = {BCNext},
+  Howpublished         = {Web document},
+  Year                 = "2013",
+  URL                  = {https://nxtwiki.org/wiki/Whitepaper:Nxt#Blocks}
 }
