--- a/whitepaper/header/deps.tex
+++ b/whitepaper/header/deps.tex
@@ -1,13 +1,18 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{bookmark}
 \usepackage{bytefield}
+\usepackage{ctex}
+\usepackage{etoolbox}
 \usepackage{fancyhdr}
 \usepackage[left=2.5cm, right=2.5cm]{geometry} % for better on-line reading
 \usepackage{float}
 \usepackage{hyperref}
+\usepackage{imakeidx}
 \usepackage{lastpage}
 \usepackage{lettrine}
 \usepackage{lmodern}
+\usepackage{multirow}
 \usepackage{makecell}
 \usepackage{makeidx}
 \usepackage{microtype}
@@ -15,7 +20,6 @@
 \usepackage{subcaption}
 \usepackage{titlesec}
 \usepackage{titling}
-\usepackage{CJKutf8}
 \usepackage[dvipsnames]{xcolor}
 
 \usepackage[backend=biber, style=alphabetic]{biblatex}
@@ -29,9 +33,6 @@
 
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,calc,fit,positioning,decorations.markings}
-
-\input Acorn.fd
-\newcommand*\initfamily{\usefont{U}{Acorn}{xl}{n}}
 
 \renewcommand{\sectionautorefname}{}
 \renewcommand{\subsectionautorefname}{}
