--- a/whitepaper/header/title.tex
+++ b/whitepaper/header/title.tex
@@ -1,12 +1,12 @@
 \pretitle{
 	\begin{center}
-	\includegraphics{images/NEM_wankel_round.pdf}
+	\includegraphics{images/NEM_symbol.pdf}
 	\\
 	\vspace{15mm}
 }
 
 \title{
-	\fontsize{72pt}{74pt}\textbf{NEM}
+	\fontsize{72pt}{74pt}\textbf{Symbol}
 	\\
 	\vspace{5mm}
 	\fontsize{18pt}{20pt}\textit{技术指南（白皮书）}
