--- a/whitepaper/header/commands.tex
+++ b/whitepaper/header/commands.tex
@@ -1,23 +1,29 @@
 % constants
-\newcommand*{\codename}{Catapult}
-\newcommand*{\codenamespace}{Catapult }
-\newcommand*{\codenamechapterfirstword}{\nemchapterfirstletter{C}{atapult} }
+\newcommand*{\codename}{\textcolor{nemleading}{\textbf{Symbol}}}
+\newcommand*{\codenamespace}{\codename{ }}
+\newcommand*{\codenamechapterfirstword}{\nemchapterfirstletter{S}{ymbol} }
 
 % math constants
 \newcommand{\euler}{\mathrm{e}}
 
 % math formatting
-\newcommand{\mathfunc}[1]{\mathrm{#1}}
-\newcommand{\structField}[2]{#1\mathrm{{::}#2}}
+\newcommand{\mathfunc}[1]{\operatorname{#1}}
+\newcommand{\mathvar}[1]{\mathit{#1}}
+\newcommand{\mathname}[1]{\textit{#1}}
+\newcommand{\structField}[2]{%
+\ifmmode#1\hspace{0pt}\mathrm{{::}\hspace{0pt}#2}\else\texttt{#1\hspace{0pt}::\hspace{0pt}#2}\fi
+}
+
+% alias for hash used in many places
+\newcommand{\hf}{\operatorname{H}}
 
 % nem index
-\newcommand{\nind}[1]{
-	\emph{#1}\index{#1}
-}
+\newcommand{\nind}[1]{\emph{#1}\index{#1}}
 
 % reference formatting
 \newcommand{\nemref}[1]{\autoref{#1}:~\nameref{#1}}
 \newcommand{\nemrefparens}[1]{(see \nemref{#1})}
+\newcommand{\nemtechdocsfootnote}[1]{\footnote{See \url{https://nemtech.github.io/#1} for details.}}
 
 %%% basic formatting %%%
 
@@ -26,11 +32,11 @@
 \newcommand{\filepath}[1]{\texttt{#1}}
 
 \newcommand{\nemchapterfirstletter}[1]{
-	\lettrine[lraise=0,lines=4,nindent=0.5em,slope=0.0em]{\initfamily\color{nemgreen}\fontsize{72pt}{74pt}\selectfont #1}
+	\lettrine[lraise=0,lines=3,nindent=0.5em,slope=0.0em]{\color{nemdark}\fontseries{bx}\fontsize{54pt}{56pt}\selectfont #1}
 }
 
-\protected\def \nemsetting #1#2{
-	\ifmmode\text{#2}\else\textit{#1{\allowbreak}:{\allowbreak}#2}\fi
+\protected\def \nemsetting #1#2{%
+\ifmmode\text{#2}\else\textit{\ifstrequal{#1}{#2}{#1}{#1\hspace{0pt}:\hspace{0pt}#2}}\fi
 }
 
 %%% figure formatting %%%
@@ -81,6 +87,13 @@
 		#1
 	\end{bytefield}
 	\caption{#2}
+}
+
+% creates a single word memory layout wordbox
+\newcommand{\nemmemorysinglewordbox}[2]{
+	\begin{leftwordgroup}{\texttt{#1}}
+		\wordbox{1}{#2}
+	\end{leftwordgroup}
 }
 
 % creates a multiword memory layout wordbox that has top-aligned text
